<resources>
    <string name="app_name">ShinDigz 1.1</string>
    <string name="password">Password</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="confirmButton">Confirm</string>
    <string name="validEmail">Enter a valid E-mail address</string>
    <string name="loginButton">Login</string>
    <string name="email">E-mail</string>
    <string name="register">New to ShinDigz? Click here to create an account.</string>
    <string name="title">ShinDigz</string>
    <string name="email_error">Please enter a valid email.</string>
    <string name="non_matching_pass">Passwords do not match!</string>
    <string name="bad_password">Incorrect password format</string>
    <string name="new_acct_toast">Something went wrong check your credentials</string>
</resources>
