<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pc.shindigz11.CreateAccountActivity">

    <EditText
        android:id="@+id/newEmailField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="180dp"
        android:width="350dp"
        android:ems="10"
        android:hint="@string/validEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newPasswordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="350dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/newEmailField"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/ConfirmPassField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="350dp"
        android:ems="10"
        android:hint="@string/confirmPass"
        android:inputType="textPassword"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordField"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/bConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmButton"
        android:layout_marginTop="51dp"
        app:layout_constraintTop_toBottomOf="@+id/ConfirmPassField"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
